добавил тег img

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,4 +1,8 @@
 {
   "cssTheme": "",
-  "theme": "obsidian"
+  "theme": "obsidian",
+  "interfaceFontFamily": "",
+  "textFontFamily": "JetBrains Mono",
+  "baseFontSize": 23,
+  "baseFontSizeAction": true
 }
