Коммит от 08.11.24 Начал блок C#

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,7 +1,7 @@
 {
   "cssTheme": "",
   "theme": "obsidian",
-  "interfaceFontFamily": "",
+  "interfaceFontFamily": "JetBrains Mono",
   "textFontFamily": "JetBrains Mono",
   "baseFontSize": 23,
   "baseFontSizeAction": true
